--- a/client/src/components/Game.css
+++ b/client/src/components/Game.css
@@ -1,7 +1,11 @@
+.game-page {
+  padding-top: 50px;
+}
+
 .game-choice-form {
   display: flex;
   justify-content: center;
-  margin-top: 62px;
+  margin-top: 15px;
 }
 
 .game-choice-form .check-button-group {
@@ -55,7 +59,5 @@
 }
 
 .continue-game-button {
-  position: relative;
-  left: 50%;
-  margin: 30px 0 0 -54.5px;
+  margin-top: 20px;
 }
