--- a/client/src/components/Game.css
+++ b/client/src/components/Game.css
@@ -61,3 +61,17 @@
 .continue-game-button {
   margin-top: 20px;
 }
+
+@media only screen and (max-width: 768px) {
+  .game-choice-form .check-button-group {
+    width: 150px;
+    height: 95px;
+    border: solid 3px #39e8b0;
+  }
+
+  .game-choice-form .check-button-group:hover {
+    width: 150px;
+    height: 95px;
+    border: dotted 3px #39e8b0;
+  }
+}
